// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List > Snapshots > should apply 'bullet' skin classes 1`] = `
<div>
  <ul
    class="_list_05156b _list--bullet_05156b _list--gap-xs_05156b"
  >
    <li
      class="_list__item_05156b"
    >
      Item
    </li>
  </ul>
</div>
`;

exports[`List > Snapshots > should apply 'decimal' skin classes 1`] = `
<div>
  <ul
    class="_list_05156b _list--decimal_05156b _list--gap-xs_05156b"
  >
    <li
      class="_list__item_05156b"
    >
      Item
    </li>
  </ul>
</div>
`;

exports[`List > Snapshots > should apply 'none' skin classes 1`] = `
<div>
  <ul
    class="_list_05156b _list--none_05156b _list--gap-xs_05156b"
  >
    <li
      class="_list__item_05156b"
    >
      Item
    </li>
  </ul>
</div>
`;

exports[`List > Snapshots > should render additional classes 1`] = `
<div>
  <ul
    class="_list_05156b _list--bullet_05156b _list--gap-xs_05156b other-class"
  >
    <li
      class="_list__item_05156b other-class"
    >
      Item
    </li>
  </ul>
</div>
`;

exports[`List > Snapshots > should renders default component 1`] = `
<div>
  <ul
    class="_list_05156b _list--bullet_05156b _list--gap-xs_05156b"
  >
    <li
      class="_list__item_05156b"
    >
      Item
    </li>
  </ul>
</div>
`;
